// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when isFree is false and there is a price range 1`] = `
<Component
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "rgb(45, 47, 127)",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="price"
      >
        From £12
      </Text>
    </Component>
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
        }
      }
      type="small"
    >
      12:12 - 13:12
    </Text>
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
            "paddingTop": 4,
          }
        }
        type="h3"
      >
        name
      </Text>
    </Component>
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
          "paddingTop": 4,
        }
      }
      type="small"
    >
      location
    </Text>
  </Component>
</Component>
`;

exports[`renders correctly when isFree is false and there's only one price 1`] = `
<Component
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "rgb(45, 47, 127)",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="price"
      >
        £12
      </Text>
    </Component>
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
        }
      }
      type="small"
    >
      12:12 - 13:12
    </Text>
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
            "paddingTop": 4,
          }
        }
        type="h3"
      >
        name
      </Text>
    </Component>
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
          "paddingTop": 4,
        }
      }
      type="small"
    >
      location
    </Text>
  </Component>
</Component>
`;

exports[`renders correctly when isFree is true 1`] = `
<Component
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "rgb(45, 47, 127)",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="price"
      >
        Free
      </Text>
    </Component>
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
        }
      }
      type="small"
    >
      12:12 - 13:12
    </Text>
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
            "paddingTop": 4,
          }
        }
        type="h3"
      >
        name
      </Text>
    </Component>
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
          "paddingTop": 4,
        }
      }
      type="small"
    >
      location
    </Text>
  </Component>
</Component>
`;
